...
        val maximum = state.durationsMs.max()
        Row(Modifier.fillMaxWidth(), verticalAlignment = Alignment.Bottom) {
            Column {
                Box(Modifier.height(150.dp)) {
                    Text(formatZoneDuration(maximum), style = MaterialTheme.typography.labelSmall,
                        modifier = Modifier.align(Alignment.TopStart))
                    Text("00:00", style = MaterialTheme.typography.labelSmall,
                        modifier = Modifier.align(Alignment.BottomStart))
                }
                Text("\n", style = MaterialTheme.typography.labelSmall)
            }
            HeartRateZone.entries.forEach { zone ->
                val duration = state.durationsMs[zone.ordinal]
...
